# ktp-desktop-applets

./: .gitmodules  .kde-ci.yml  .reviewboardrc  50-renameKTpApplets.js  CMakeLists.txt  Messages.sh  metadata.desktop  plasma_applet_ktp_contact.desktop  telepathy-contact-applet.desktop  telepathy-contact-list-applet.desktop
chat/: CMakeLists.txt  Messages.sh
chat/org.kde.ktp-chat/: metadata.desktop  metadata.desktop.cmake
chat/org.kde.ktp-chat/contents/config/: main.xml
chat/org.kde.ktp-chat/contents/ui/: ActionDelegate.qml  ChatWidget.qml  ConversationDelegate.qml  ConversationDelegateButton.qml  FullChatList.qml  OutgoingDelegate.qml  TextDelegate.qml  main.qml
chat/qmlplugin/: CMakeLists.txt  htmlhelper.cpp  htmlhelper.h  qmldir  qmlplugin.cpp
cmake/modules/: FindKTelepathy.cmake
contact/: CMakeLists.txt  Messages.sh  plasma-applet-ktp-contact.desktop  plasma-applet-ktp-contact.desktop.cmake
contact-applet/: CMakeLists.txt  Messages.sh  plasma_applet_ktp_contact.desktop
contact-applet/src/: abstract-contact-delegate.h  applet_config.cpp  applet_config.h  config.cpp  config.h  contact-delegate.cpp  contact-delegate.h  contact-wrapper.cpp  contact-wrapper.h  telepathy-contact.cpp
contact-applet/src/declarative/contents/ui/: Avatar.qml  DropDownMenu.qml  main.qml
contact/src/: abstract-contact-delegate.cpp  abstract-contact-delegate.h  applet_config.cpp  applet_config.h  contact-delegate-compact.cpp  contact-delegate-compact.h  contact-delegate.cpp  contact-wrapper.cpp  contact-wrapper.h  telepathy-contact.cpp  telepathy-contact.h
contact/src/declarative/contents/ui/: Avatar.qml  Contact.qml  DropDownMenu.qml  main.qml
contactlist/: CMakeLists.txt  Messages.sh
contactlist/org.kde.ktp-contactlist/: metadata.desktop  metadata.desktop.cmake
contactlist/org.kde.ktp-contactlist/contents/ui/: ContactList.qml  ExternalLabel.qml  ListContactDelegate.qml  main.qml
contactlist/qmlplugin/: CMakeLists.txt  qmldir  qmlplugin.cpp  register-contact-applet.cpp  register-contact-applet.h
declarative-plugin/: CMakeLists.txt  qml-plugin.cpp  qml-plugin.h  qmldir
org.kde.ktp.contactlist/: metadata.desktop
package/: metadata.desktop
person/: CMakeLists.txt  Messages.sh  metadata.desktop
person/contents/config/: main.xml
person/contents/ui/: Person.qml  main.qml  settingsGeneral.qml
person/org.kde.person/: metadata.desktop.cmake
person/org.kde.person/contents/config/: config.qml  main.xml
person/org.kde.person/contents/ui/: Person.qml
po/ar/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.person.po
po/ca/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/ca@valencia/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/cs/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/da/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/de/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/el/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/en_GB/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/eo/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.person.po
po/es/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/et/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/eu/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/fi/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/fr/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/gl/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/hi/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/ia/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/it/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/ja/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/ka/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/ko/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/lt/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/nl/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/nn/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
po/pl/: plasma_applet_org.kde.ktp-chat.po  plasma_applet_org.kde.ktp-contactlist.po  plasma_applet_org.kde.person.po
presence/: .reviewboardrc  CMakeLists.txt  Messages.sh  plasma-applet-ktp-presence-kpeople.desktop.cmake  plasma-applet-ktp-presence.desktop  plasma-applet-ktp-presence.desktop.cmake
presence/src/: presence-applet.cpp  presence-applet.h  presence.cpp  presence.h  presenceapplet.cpp
src/: abstract-contact-delegate.cpp  abstractContactDelegate.cpp  config.cpp  config.h  config.ui  contact-delegate.cpp  contact-wrapper.cpp  contact-wrapper.h  contactDelegate.cpp  contactDelegate.h  contactWrapper.cpp  contactWrapper.h  flat-model-proxy.cpp  flat-model-proxy.h  telepathy-contact.cpp  telepathy-contact.h  telepathyContact.cpp  telepathyContact.h
src/declarative/: Avatar.qml
(+66 files in other folders)
